			SWI-Prolog ChangeLog
			====================

  * ADDED: assume/1 (library(debug)) to call expand_goal/2 on arguments.

  * FIXED: Bug #9: GUI tracer handling string objects (Holger Kanwischer)

  * FIXED: Bug #8: module-specifier while listing declarations.
    Tolga Konik.

  * ADDED: Perform goal-expansion on 2nd argument of findall/3, bagof/3
    and setof/3.


VERSION 5.1.6 (Jan 17, 2003)
============================

  * ADDED: Using ?- set_prolog_flag(prompt_alternatives_no_bindings, true)
    the system prompts for alternative answers on the toplevel if the goal
    makes no bindings.  Requested by Paulo Moura.  Experimental.

  * MODIFIED: deterministic/0 has been replaced with deterministic/1.  It
    also is fixed and its semantics has been changed.  See manual.

  * FIXED: \=@=/2 (Lourens van der Meij).

  * ADDED: relative uri net path resolution (awkward, but needed for RDF
    test-suite).  library(url).

  * FIXED: #2: Handle Control-C in plcon.exe (Windows console app).


VERSION 5.1.5 (Jan 06, 2003)
============================

  * FIXED: Make alarm/4 (library(time), package clib) handle exceptions more
    elegant.

  * FIXED: Quoting rules for plld.c.  Failed to link packages on MacOS X
    (Kuniaki Mukai)

  * ADDED: HTTP package for dealing with HTTP server and client software
    from Prolog.

  * ADDED: library(debug) for dealing with print-statements from your code
    and assumptions you make during development.  Documented in the reference
    manual.


VERSION 5.1.4 (Dec 20, 2002)
============================

  * FIXED: race-condition in autoloader.

  * FIXED: Streams with timeout could signal end-of-file on an interrupt.

  * ADDED: Base sleep/1 on nanosleep() if this function is available.

  * FIXED: copy_stream_data/[2,3] locking problem.

  * FIXED: call_cleanup/[2,3] to pass exceptions properly

  * ADDED: thread_detach/1.

  * MODIFIED: thread_create/3 returns alias-name for id if an alias is
    specified.
