@@ -1,6 +1,14 @@
 			SWI-Prolog ChangeLog
 			====================
 
+					--------------------------------------
+					NOTE: Bug #<N> refers to bugs reported
+					to the SWI-Prolog Bugzilla system at
+					http://gollem.swi.psy.uva.nl/bugzilla/
+					--------------------------------------
+
+  * FIXED: Bug #7: Protocol of typed input in (Windows).  Tolga Konik.
+
   * ADDED: assume/1 (library(debug)) to call expand_goal/2 on arguments.
 
   * FIXED: Bug #9: GUI tracer handling string objects (Holger Kanwischer)
